<?xml version="1.0" encoding="utf-8"?>
<!-- This is the layout file for creating a new post -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:orientation="vertical"
              android:layout_margin="16dp"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Post Title"/>

    <EditText
        android:id="@+id/post_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/new_post_name_prompt"
        android:textColor="@android:color/darker_gray"/>
    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/choose_upload"/>
    <ImageButton
        android:id="@+id/pic_select"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        app:srcCompat="@drawable/ic_pic_select"/>
    <ImageButton
        android:id="@+id/group_camera"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:src="@android:drawable/ic_menu_camera"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="or  "/>

    <EditText
        android:id="@+id/post_url"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@android:color/darker_gray"
        android:text="@string/website"/>

    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Post Description"/>

    <EditText
        android:id="@+id/post_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@android:color/darker_gray"
        android:text="@string/description"/>
    <Button
        android:id="@+id/post_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/holo_blue_dark"
        android:text="@string/post"/>
</LinearLayout>